Update companies list

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -32,6 +32,7 @@ Below is a partial list of some companies using Clojure or ClojureScript. Most o
 * http://buyhappy.co/[Buy Happy]
 * https://cardforcoin.com/[cardforcoin] and https://foldapp.com/[Fold]
 * http://www.cerner.com/[Cerner]
+* http://chariotsolutions.com/[Chariot Solutions]
 * http://chartbeat.com[Chartbeat]
 * http://www.cicayda.com/[Cicayda]
 * https://circleci.com/[CircleCI]
