--- a/content/reference/other_libraries.adoc
+++ b/content/reference/other_libraries.adoc
@@ -1,8 +1,13 @@
-= Other Libraries
+= Other Included Libraries
 Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:navlinktext: Other Libraries
+:prevpagehref: compilation
+:prevpagetitle: Compilation and Class Generation
+:nextpagehref: lisps
+:nextpagetitle: Differences with Lisps
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
