--- a/content/about/runtime_polymorphism.adoc
+++ b/content/about/runtime_polymorphism.adoc
@@ -3,10 +3,13 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:prevpagehref: lisp
+:prevpagetitle: Lisp
+:nextpagehref: concurrent_programming
+:nextpagetitle: Concurrent Programming
+
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
-== Runtime Polymorphism
 
 Systems that utilize runtime polymorphism are easier to change and extend. Clojure supports polymorphism in several ways:
 
