--- a/content/community/resources.adoc
+++ b/content/community/resources.adoc
@@ -6,7 +6,6 @@ Rich Hickey
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Community Resources 
 
 * http://groups.google.com/group/clojure[Clojure Google Group]
 
@@ -21,7 +20,7 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 * <<swag#,Clojure Swag>>
 * <<companies#,Companies Using Clojure>>
 
-=== Conferences 
+== Conferences
 
 * http://clojure-conj.org/[Clojure/conj]
 * *2015 - Nov 16-18 in Philadelpha, PA*
