--- a/content/reference/atoms.adoc
+++ b/content/reference/atoms.adoc
@@ -3,10 +3,12 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:prevpagehref: agents
+:prevpagetitle: Agents
+:nextpagehref: reducers
+:nextpagetitle: Reducers
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
-== Atoms
 
 Atoms provide a way to manage shared, synchronous, independent state. They are a reference type like refs and vars. You create an atom with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/atom[atom], and can access its state with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deref[deref/@]. Like refs and agents, atoms support validators. To change the value of an atom, you can use http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/swap![swap!]. A lower-level http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/compare-and-set![compare-and-set!] is also provided. Changes to atoms are always free of race conditions.
 
