--- a/content/reference/datatypes.adoc
+++ b/content/reference/datatypes.adoc
@@ -1,24 +1,27 @@
-= Datatypes
+= Datatypes: deftype, defrecord and reify
 Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:navlinktext: Datatypes
+:prevpagehref: data_structures
+:prevpagetitle: Data Structures
+:nextpagehref: sequences
+:nextpagetitle: Sequences
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
 
-== Datatypes - deftype, defrecord and reify
-
-=== Motivation
+== Motivation
 
 Clojure is written in terms of abstractions. There are abstractions for sequences, collections, callability, etc. In addition, Clojure supplies many implementations of these abstractions. The abstractions are specified by host interfaces, and the implementations by host classes. While this was sufficient for bootstrapping the language, it left Clojure without similar abstraction and low-level implementation facilities. The <<protocols#,protocols>> and <<datatypes#,datatypes>> features add powerful and flexible mechanisms for abstraction and data structure definition with no compromises vs the facilities of the host platform.
 
-=== Basics
+== Basics
 
 The datatype features - http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deftype[deftype] , http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defrecord[defrecord] and http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reify[reify] , provide the mechanism for defining implementations of abstractions, and in the case of reify, instances of those implementations. The abstractions themselves are defined by either <<protocols#,protocols>> or interfaces. A datatype provides a host type, (named in the case of deftype and defrecord, anonymous in the case of reify), with some structure (explicit fields in the case of deftype and defrecord, implicit closure in the case of reify), and optional in-type implementations of abstraction methods. They support, in a relatively clean manner, access to the highest-performance primitive representation and polymorphism mechanisms of the host. N.B. that they are not merely host-in-parens constructs. They support only a circumscribed subset of the host facilities, often with more dynamism than the host itself. The intent is that, unless interop forces one to go beyond their circumscribed scope, one need not leave Clojure to get the highest-performing data structures possible on the platform.
 
-=== deftype and defrecord
+== deftype and defrecord
 
 http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deftype[deftype] and http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defrecord[defrecord] dynamically generate compiled bytecode for a named class with a set of given fields, and, optionally, methods for one or more protocols and/or interfaces. They are suitable for dynamic and interactive development, need not be AOT compiled, and can be re-evaluated in the course of a single session. They are similar to defstruct in generating data structures with named fields, but differ from defstruct in that:
 
@@ -57,7 +60,7 @@ http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/deftype[deft
 ** only available in Clojure versions later than 1.3
 * when a defrecord Bar is defined a corresponding function `pass:[map->Bar]` is defined that takes a map and initializes a new record instance with its contents (versions 1.3 and later only)
 
-=== Why have both deftype and defrecord?
+== Why have both deftype and defrecord?
 
 It ends up that classes in most OO programs fall into two distinct categories: those classes that are artifacts of the implementation/programming domain, e.g. String or collection classes, or Clojure's reference types; and classes that represent application domain information, e.g. Employee, PurchaseOrder etc. It has always been an unfortunate characteristic of using classes for application domain information that it resulted in information being hidden behind class-specific micro-languages, e.g. even the seemingly harmless employee.getName() is a custom interface to data. Putting information in such classes is a problem, much like having every book being written in a different language would be a problem. You can no longer take a generic approach to information processing. This results in an explosion of needless specificity, and a dearth of reuse.
 
@@ -67,7 +70,7 @@ Overall, records will be better than structmaps for all information-bearing purp
 
 AOT-compiled deftype/defrecord may be suitable for some of the use cases of *gen-class*, where their limitations are not prohibitive. In those cases, they will have better performance than gen-class.
 
-=== Datatypes and protocols are opinionated
+== Datatypes and protocols are opinionated
 
 While datatypes and protocols have well-defined relationships with host constructs, and make for a great way to expose Clojure functionality to Java programs, they are not primarily interop constructs. That is, they make no effort to completely mimic or adapt to all of the OO mechanisms of the host. In particular, they reflect the following opinions:
 
@@ -84,7 +87,7 @@ While datatypes and protocols have well-defined relationships with host construc
 
 If you use datatypes and protocols you will have a clean, interface-based API to offer your Java consumers. If you are dealing with a clean, interface-based Java API, datatypes and protocols can be used to interoperate with and extend it. If you have a 'bad' Java API, you will have to use gen-class. Only in this way can the programming constructs you use to design and implement your Clojure programs be free of the incidental complexities of OO.
 
-=== reify
+== reify
 
 While deftype and defrecord define named types, http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reify[reify] defines both an anonymous type and creates an instance of that type. The use case is where you need a one-off implementation of one or more protocols or interfaces and would like to take advantage of the local context. In this respect it is use case similar to proxy, or anonymous inner classes in Java.
 
@@ -98,7 +101,7 @@ The method bodies of reify are lexical closures, and can refer to the surroundin
 
 The result is better performance than proxy, both in construction and invocation. *reify* is preferable to proxy in all cases where its constraints are not prohibitive.
 
-=== Java annotation support
+== Java annotation support
 
 Types created with deftype, defrecord, and definterface, can emit classes that include Java annotations for Java interop. Annotations are described as meta on:
 
