--- a/content/reference/evaluation.adoc
+++ b/content/reference/evaluation.adoc
@@ -3,10 +3,12 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:prevpagehref: repl_and_main
+:prevpagetitle: REPL and main
+:nextpagehref: special_forms
+:nextpagetitle: Special Forms
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
-
-== Evaluation
 
 Evaluation can occur in many contexts:
 
