--- a/content/reference/java_interop.adoc
+++ b/content/reference/java_interop.adoc
@@ -3,12 +3,14 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:prevpagehref: reducers
+:prevpagetitle: Reducers
+:nextpagehref: compilation
+:nextpagetitle: Compilation and Class Generation
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
-
-== Java Interop
 
 [[dot]]
 == Member access
