--- a/content/reference/multimethods.adoc
+++ b/content/reference/multimethods.adoc
@@ -1,14 +1,16 @@
-= Multimethods
+= Multimethods and Hierarchies
 Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:prevpagehref: transducers
+:prevpagetitle: Transducers
+:nextpagehref: protocols
+:nextpagetitle: Protocols
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
-
-== Multimethods and Hierarchies
 
 Clojure eschews the traditional object-oriented approach of creating a new data type for each new situation, instead preferring to build a large library of functions on a small set of types. However, Clojure fully recognizes the value of runtime polymorphism in enabling flexible and extensible system architecture. Clojure supports sophisticated runtime polymorphism through a multimethod system that supports dispatching on types, values, attributes and metadata of, and relationships between, one or more arguments.
 
