--- a/content/reference/transducers.adoc
+++ b/content/reference/transducers.adoc
@@ -3,12 +3,14 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:prevpagehref: transients
+:prevpagetitle: Transients
+:nextpagehref: multimethods
+:nextpagetitle: Multimethods and Hierarchies
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
-
-== Transducers
 
 Transducers are composable algorithmic transformations. They are independent from the context of their input and output sources and specify only the essence of the transformation in terms of an individual element. Because transducers are decoupled from input or output sources, they can be used in many different processes - collections, streams, channels, observables, etc. Transducers compose directly, without awareness of input or creation of intermediate aggregates.
 
