--- a/content/reference/vars.adoc
+++ b/content/reference/vars.adoc
@@ -1,14 +1,17 @@
-= Vars
+= Vars and the Global Environment
 Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:navlinktext: Vars and Environments
+:prevpagehref: libs
+:prevpagetitle: Libs
+:nextpagehref: refs
+:nextpagetitle: Refs and Transactions
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 toc::[]
-
-== Vars and the Global Environment
 
 Clojure is a practical language that recognizes the occasional need to maintain a persistent reference to a changing value and provides 4 distinct mechanisms for doing so in a controlled manner - Vars, <<refs#,Refs>>, <<agents#,Agents>> and <<atoms#,Atoms>>. Vars provide a mechanism to refer to a mutable storage location that can be dynamically rebound (to a new storage location) on a per-thread basis. Every Var can (but needn't) have a root binding, which is a binding that is shared by all threads that do not have a per-thread binding. Thus, the value of a Var is the value of its per-thread binding, or, if it is not bound in the thread requesting the value, the value of the root binding, if any.
 
@@ -55,7 +58,7 @@ Bindings created with _**binding**_ cannot be seen by any other thread. Likewise
 Functions defined with http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] are stored in Vars, allowing for the re-definition of functions in a running program. This also enables many of the possibilities of aspect- or context-oriented programming. For instance, you could wrap a function with logging behavior only in certain call contexts or threads.
 
 [[set]]
-=== (*set!* var-symbol expr)
+== (*set!* var-symbol expr)
 
 Assignment special form.
 
@@ -66,18 +69,19 @@ Note - _you cannot assign to function params or local bindings. Only Java fields
 Using <<java_interop#set,set>> for Java fields is documented in <<java_interop#set,Java Interop>>.
 
 [[Interning]]
-=== Interning
+== Interning
+
 The Namespace system maintains global maps of symbols to Var objects _(see <<namespaces#,Namespaces>>)_. If a _**def**_ expression does not find an interned entry in the current namespace for the symbol being def-ed, it creates one, otherwise it uses the existing Var. This find-or-create process is called interning. This means that, unless they have been unmap-ed, Var objects are stable references and need not be looked up every time. It also means that namespaces constitute a global environment in which, as described in <<evaluation#,Evaluation>>, the compiler attempts to resolve all free symbols as Vars.
 
 The <<special_forms#var,var>> special form or the `pass:[#']` reader macro _(see <<reader#,Reader>>)_ can be used to get an interned Var object instead of its current value.
 
 [[local-vars]]
-=== Non-interned Vars
+== Non-interned Vars
 
 It is possible to create vars that are not interned by using http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/with-local-vars[with-local-vars]. These vars will not be found during free symbol resolution, and their values have to be accessed manually. But they can serve as useful thread-local mutable cells.
 
 [[related]]
-=== Related functions
+== Related functions
 
 [%hardbreaks]
 Variants of _**def**_: http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn[defn] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defn-[defn-] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/definline[definline] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmacro[defmacro] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmethod[defmethod] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defmulti[defmulti] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defonce[defonce] http://clojure.github.io/clojure/clojure.core-api.html#clojure.core/defstruct[defstruct]
