--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -16,7 +16,8 @@ Clojure In Action
 Amit Rathore
 http://www.amazon.com/Clojure-Action-Amit-Rathore/dp/1617291528/ref=sr_1_10?ie=UTF8&qid=1448163622&sr=8-10&keywords=clojure
 
-![Clojure In Action](http://ecx.images-amazon.com/images/I/51QWOEjmtIL._AA160_.jpg)
+[![Clojure In Action](http://ecx.images-amazon.com/images/I/51QWOEjmtIL._AA160_.jpg)]
+[[http://ecx.images-amazon.com/images/I/51QWOEjmtIL._AA160_.jpg]]
 
 ![Clojure In Action](http://ws.assoc-amazon.com/widgets/q?_encoding=UTF8&amp;Format=_SL160_&amp;ASIN=1935182595&amp;MarketPlace=US&amp;ID=AsinImage&amp;WS=1&amp;tag=clojure-20&amp;ServiceVersion=20070822)
 
