--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -6,6 +6,8 @@ Rich Hickey
 
 Please support these fine books about Clojure
 
+![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+
 Programming Clojure 
 
 The Joy of Clojure
