--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -7,6 +7,7 @@ Rich Hickey
 Please support these fine books about Clojure
 
 ![Image of Yaktocat](https://octodex.github.com/images/yaktocat.png)
+image::https://octodex.github.com/images/yaktocat.png[Image of Yaktocat]
 
 Programming Clojure 
 
