--- a/content/guides/getting_started.adoc
+++ b/content/guides/getting_started.adoc
@@ -64,7 +64,7 @@ Official:
 * http://clojure.github.io/clojure/[Clojure API Docs]
 * http://clojure.github.io/[Clojure Contrib Library API Docs]
 * <<xref/../../reference/documentation#,Clojure Reference Docs>> - official reference information
-* <<xref/../../reference/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
+* <<xref/../../api/cheatsheet#,Clojure Cheatsheet>> - helpful categorization of most core functions
 * Source - https://github.com/clojure/clojure[Clojure], https://github.com/clojure/clojurescript[ClojureScript], https://github.com/clojure/clojure-clr[ClojureCLR]
 * Issues - http://dev.clojure.org/jira/browse/CLJ[Clojure], http://dev.clojure.org/jira/browse/CLJS[ClojureScript], http://dev.clojure.org/jira/browse/CLJCLR[ClojureCLR]
 
