Use icons for admonitions

--- a/content/about/concurrent_programming.adoc
+++ b/content/about/concurrent_programming.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:icons: font
 :prevpagehref: runtime_polymorphism
 :prevpagetitle: Runtime Polymorphism
 :nextpagehref: jvm_hosted
