--- a/content/about/state.adoc
+++ b/content/about/state.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:icons: font
 :navlinktext: State
 :prevpagehref: rationale
 :prevpagetitle: Rationale
