--- a/content/reference/documentation.adoc
+++ b/content/reference/documentation.adoc
@@ -3,10 +3,11 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
-== Reference Documentation 
+== Reference Documentation
 
 * <<reader#,The Reader>>
 * <<repl_and_main#,The REPL and main>>
