--- a/content/reference/evaluation.adoc
+++ b/content/reference/evaluation.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :prevpagehref: repl_and_main
 :prevpagetitle: REPL and main
 :nextpagehref: special_forms
