--- a/content/reference/lisps.adoc
+++ b/content/reference/lisps.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Differences with Lisps
 :prevpagehref: other_libraries
 :prevpagetitle: Other Libraries
