--- a/content/reference/macros.adoc
+++ b/content/reference/macros.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :prevpagehref: special_forms
 :prevpagetitle: Special Forms
 :nextpagehref: other_functions
