--- a/content/reference/other_libraries.adoc
+++ b/content/reference/other_libraries.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Other Libraries
 :prevpagehref: compilation
 :prevpagetitle: Compilation and Class Generation
