--- a/content/about/dynamic.adoc
+++ b/content/about/dynamic.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:icons: font
 :prevpagehref: state
 :prevpagetitle: State
 :nextpagehref: functional_programming
