--- a/content/about/lisp.adoc
+++ b/content/about/lisp.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:icons: font
 :navlinktext: Lisp
 :prevpagehref: functional_programming
 :prevpagetitle: Functional Programming
