--- a/content/about/runtime_polymorphism.adoc
+++ b/content/about/runtime_polymorphism.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: about
 :toc: macro
+:icons: font
 :prevpagehref: lisp
 :prevpagetitle: Lisp
 :nextpagehref: concurrent_programming
