--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :jbake-type: page
 :toc: macro
+:icons: font
 
 Below is a partial list of some companies using Clojure or ClojureScript. Most of this information comes from direct contacts, presentations, or other online resources. If you would like to be added or removed from this list, please contact __alex.miller@cognitect.com__.
 
