--- a/content/community/contributing_site.adoc
+++ b/content/community/contributing_site.adoc
@@ -3,6 +3,7 @@ Alex Miller
 2015-10-15
 :jbake-type: page
 :toc: macro
+:icons: font
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
@@ -57,8 +58,8 @@ If you are going to create an entirely new page or make significant changes requ
 
 To create a local environment for working on a bigger change:
 
-. Fork the content repository https://github.com/clojure/clojure-site - this will create a version of the site content under your own user id. 
-. `git clone` the forked repository in your local terminal and `cd clojure-site`. 
+. Fork the content repository https://github.com/clojure/clojure-site - this will create a version of the site content under your own user id.
+. `git clone` the forked repository in your local terminal and `cd clojure-site`.
 . `git checkout -b <branchname>` - create a new branch to work on your change. You'll use this branch to submit a pull request.
 . Make one or more commits on this branch, modifying or adding one or more files. See the section below on how to build and preview changes locally. The <<editing#,Editing>> page lists examples of the most common things you will encounter when editing content on this site.
 . Use `git push` to push your changes to the branch.
@@ -70,7 +71,7 @@ To actively contribute to the site, it's important to keep your own fork up-to-d
 . Add this repository to your remote urls: `git remote add upstream https://github.com/clojure/clojure-site.git`.
 . Before every contribution:
    - fetch the content of upstream: `git fetch upstream` ;
-   - move to your master branch: `git checkout master` (in case you aren't already there); 
+   - move to your master branch: `git checkout master` (in case you aren't already there);
    - clean your master branch of any unplanned modifications by reseting the HEAD to the fetched branch: `git reset --hard upstream/master`; and
    - create a new branch as explained above: `git checkout -b <branchname>`
 
