--- a/content/reference/agents.adoc
+++ b/content/reference/agents.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Agents
 :prevpagehref: refs
 :prevpagetitle: Refs and Transactions
