--- a/content/reference/compilation.adoc
+++ b/content/reference/compilation.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Compilation and Class Generation
 :prevpagehref: java_interop
 :prevpagetitle: Java Interop
