--- a/content/reference/datatypes.adoc
+++ b/content/reference/datatypes.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Datatypes
 :prevpagehref: data_structures
 :prevpagetitle: Data Structures
