--- a/content/reference/libs.adoc
+++ b/content/reference/libs.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Libs
 :prevpagehref: namespaces
 :prevpagetitle: Namespaces
