--- a/content/reference/namespaces.adoc
+++ b/content/reference/namespaces.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :prevpagehref: metadata
 :prevpagetitle: Metadata
 :nextpagehref: libs
