--- a/content/reference/other_functions.adoc
+++ b/content/reference/other_functions.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Other Functions
 :prevpagehref: macros
 :prevpagetitle: Macros
