--- a/content/reference/protocols.adoc
+++ b/content/reference/protocols.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :prevpagehref: multimethods
 :prevpagetitle: Multimethods and Hierarchies
 :nextpagehref: metadata
