--- a/content/reference/vars.adoc
+++ b/content/reference/vars.adoc
@@ -3,6 +3,7 @@ Rich Hickey
 2015-01-01
 :type: reference
 :toc: macro
+:icons: font
 :navlinktext: Vars and Environments
 :prevpagehref: libs
 :prevpagetitle: Libs
